Updated Skill and Email Function

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
   <div class="hero-left">
     <img src="images/profile.jpeg" alt="Profile Image" class="profile-pic">
   </div>
-
   <!-- CENTER: Hero Text + Buttons -->
   <div class="hero-center">
     <h2 class="greeting"><span id="greeting-text">Hello!</span></h2>
@@ -36,7 +35,6 @@
       <a href="#contact" class="btn btn-secondary">CONTACT ME</a>
     </div>
   </div>
-
   <!-- RIGHT: Contact Icons -->
   <div class="hero-right">
     <div class="icon-box">
@@ -52,8 +50,8 @@
       </a>
     </div>
     <div class="icon-box">
-      <a href="mailto:usmanasghar2121.com">
-        <img src="images/mail.png" alt="Email" />
+      <a href="https://mail.google.com/mail/?view=cm&fs=1&to=usmanasghar2121@gmail.com" target="_blank" rel="noopener noreferrer">
+        <img src="images/mail.png" alt="Email" title="usmanasghar2121.com"  />
         <p>EMAIL</p>
       </a>
     </div>
@@ -65,7 +63,6 @@
     </div>
   </div>
 </section>
-
 <!-- About Section -->
 <section id="about" class="about">
   <h2>About Me</h2>
@@ -116,64 +113,58 @@
   </div>
 </section>
 <!-- Skills Section -->
-<section id="skills" class="skills-section">
-  <div class="section-header">
-    <h2>Current Skills</h2>
+<section id="skills">
+<h1 class="section-header">Current Skills</h1>
+  <!-- Languages -->
+  <div class="skill-category">
+    <h3>Languages</h3>
+    <div class="skills-grid">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/python/python-original.svg" alt="Python" title="Python">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sqlite/sqlite-original.svg" alt="SQL" title="SQL">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/cplusplus/cplusplus-original.svg" alt="C++" title="C++">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/java/java-original.svg" alt="Java" title="Java">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/javascript/javascript-original.svg" alt="JavaScript" title="JavaScript">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/html5/html5-original.svg" alt="HTML" title="HTML">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg" alt="CSS" title="CSS">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/r/r-original.svg" alt="R" title="R">
+    </div>
   </div>
-  <div class="skills-grid">
-    <div class="skill-category">
-      <h3>Languages</h3>
-      <ul>
-        <li>Python</li>
-        <li>SQL</li>
-        <li>C/C++</li>
-        <li>Java</li>
-        <li>JavaScript</li>
-        <li>HTML/CSS</li>
-        <li>R</li>
-      </ul>
+  <!-- Libraries -->
+  <div class="skill-category">
+    <h3>Libraries & Frameworks</h3>
+    <div class="skills-grid">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/pandas/pandas-original.svg" alt="Pandas" title="Pandas">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/scikitlearn/scikitlearn-original.svg" alt="Scikit-learn" title="Scikit-learn">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/matplotlib/matplotlib-original.svg" alt="Matplotlib" title="Matplotlib">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/react/react-original.svg" alt="React" title="React">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/angularjs/angularjs-original.svg" alt="AngularJS" title="AngularJS">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/bootstrap/bootstrap-original.svg" alt="Bootstrap" title="Bootstrap">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-original.svg" alt="NodeJS" title="NodeJS">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/spring/spring-original.svg" alt="SpringBoot" title="SpringBoot">
     </div>
-    <div class="skill-category">
-      <h3>Tools & Platforms</h3>
-      <ul>
-        <li>AWS</li>
-        <li>Docker</li>
-        <li>Git/GitHub</li>
-        <li>Firebase</li>
-        <li>Excel</li>
-        <li>Tableau</li>
-        <li>Vercel</li>
-        <li>Vite</li>
-        <li>Unix</li>
-        <li>OpenRefine</li>
-        <li>Neo4j</li>
-      </ul>
+  </div>
+  <!-- Developer Tools -->
+  <div class="skill-category">
+    <h3>Developer Tools</h3>
+    <div class="skills-grid">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/amazonwebservices/amazonwebservices-original-wordmark.svg" alt="AWS" title="AWS">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="Git" title="Git">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub" title="GitHub">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/firebase/firebase-plain.svg" alt="Firebase" title="Firebase">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/vite/vite-original.svg" alt="Vite" title="Vite">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linux/linux-original.svg" alt="Unix/Linux" title="Unix/Linux">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/neo4j/neo4j-original.svg" alt="Neo4j" title="Neo4j">
     </div>
-    <div class="skill-category">
-      <h3>Libraries & Frameworks</h3>
-      <ul>
-        <li>React</li>
-        <li>Pandas</li>
-        <li>NumPy</li>
-        <li>Matplotlib</li>
-        <li>Seaborn</li>
-        <li>Scikit-learn</li>
-        <li>Plotly.express</li>
-        <li>AngularJS</li>
-        <li>Bootstrap</li>
-        <li>NodeJS</li>
-        <li>SpringBoot</li>
-      </ul>
-    </div>
-    <div class="skill-category">
-      <h3>Databases</h3>
-      <ul>
-        <li>Oracle</li>
-        <li>MongoDB</li>
-        <li>MySQL</li>
-        <li>PostgreSQL</li>
-        <li>NoSQL</li>
-      </ul>
+  </div>
+  <!-- Databases -->
+  <div class="skill-category">
+    <h3>Databases</h3>
+    <div class="skills-grid">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/oracle/oracle-original.svg" alt="Oracle" title="Oracle">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mongodb/mongodb-original.svg" alt="MongoDB" title="MongoDB">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original.svg" alt="PostgreSQL" title="PostgreSQL">
+    <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/mysql/mysql-original.svg" alt="MySQL" title="MySQL">
+    <img src="https://img.shields.io/badge/NoSQL-Database-lightgrey?style=for-the-badge&logo=databricks" alt="NoSQL" title="NoSQL">
     </div>
   </div>
 </section>
