--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
 </head>
 <body>
   <!-- Navbar -->
-  <nav class="navbar">
-    <div class="logo">Usman Asghar</div>
-    <ul class="nav-links">
-      <li><a href="#home">Home</a></li>
-      <li><a href="#about">About</a></li>
-      <li><a href="#experience">Experience</a></li>
-      <li><a href="#skills">Skills</a></li>
-      <li><a href="#projects">Projects</a></li>
-      <li><a href="#contact">Contact</a></li>
-    </ul>
-  </nav>
+  <header>
+    <nav class="navbar">
+      <div class="logo">Usman Asghar</div>
+      <div class="menu-icon" id="menu-icon">☰</div>
+      <ul class="nav-links" id="nav-links">
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav> 
+    <div class="hamburger" onclick="toggleMenu()">☰</div>
+  </header>
 <!-- Hero Section -->
 <section id="home" class="hero-layout">
   <!-- LEFT: Profile Image -->
